k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2401042"
  labels:
    name: "2401042"
