k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bionexa-backend
  namespace: "2401042"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bionexa-backend
  template:
    metadata:
      labels:
        app: bionexa-backend
    spec:
      containers:
        - name: backend
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/bionexa-2401199/bionexa-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: firebase-service-account
              mountPath: /var/run/secrets/firebase
              readOnly: true
      volumes:
        - name: firebase-service-account
          secret:
            secretName: firebase-service-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bionexa-frontend
  namespace: "2401042"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bionexa-frontend
  template:
    metadata:
      labels:
        app: bionexa-frontend
    spec:
      containers:
        - name: frontend
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/bionexa-2401199/bionexa-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
